# rpn_calc

./: .gitignore  CMakeLists.txt
Collections-C/src/: cc_stack.c
Collections-C/src/include/: cc_stack.h
calc/: CMakeLists.txt
calc/inc/t/: calc.h
calc/src/: calc.c
calc/test/: c1.c  evaluation_test.c
parser/: CMakeLists.txt
parser/inc/t/: parser.h
parser/src/: parser.c
parser/tests/: CMakeLists.txt  rpn_test.c  t1.c  t2.c  tokenizer_test.c
source/: main.c  main.cpp
